@@ -2,6 +2,7 @@ shady-KISS-skin History
 -------------------------------------------
 2016-03-13:
 - Fixed progressbarcolour in plex-detail-view
+- Added setup for banner and poster in displaychannel, switched from shifting to fading
 
 
 2016-03-12:
